--- a/crates/grotto-core/Cargo.toml
+++ b/crates/grotto-core/Cargo.toml
@@ -10,3 +10,6 @@ chrono = { version = "0.4", features = ["serde"] }
 toml = "0.8"
 uuid = { version = "1", features = ["v4"] }
 thiserror = "2"
+
+[dev-dependencies]
+tempfile = "3"
