feat: grotto serve — real-time WS server + pixel art web UI
- New grotto-serve crate (axum + notify file watcher + WS broadcast)
- Web frontend with pixi.js animated crabs, task board, event log
- CLI 'grotto serve' command (default port 9091)
- 40 tests (25 core + 10 serve unit + 5 integration)
- Updated SKILL.md with full orchestration workflow
- Built by 3 grotto agents dogfooding themselves

--- a/crates/grotto-cli/Cargo.toml
+++ b/crates/grotto-cli/Cargo.toml
@@ -9,5 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 grotto-core = { path = "../grotto-core" }
+grotto-serve = { path = "../grotto-serve" }
 clap = { version = "4", features = ["derive"] }
 serde_json = "1"
+tokio = { version = "1", features = ["full"] }
