--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["crates/grotto-core", "crates/grotto-cli"]
+members = ["crates/grotto-core", "crates/grotto-cli", "crates/grotto-serve"]
 
 [workspace.package]
 version = "0.1.0"
