--- a/crates/grotto-core/Cargo.toml
+++ b/crates/grotto-core/Cargo.toml
@@ -10,6 +10,8 @@ chrono = { version = "0.4", features = ["serde"] }
 toml = "0.8"
 uuid = { version = "1", features = ["v4"] }
 thiserror = "2"
+rand = "0.9"
+dirs = "6"
 
 [dev-dependencies]
 tempfile = "3"
