--- a/crates/grotto-cli/Cargo.toml
+++ b/crates/grotto-cli/Cargo.toml
@@ -13,3 +13,7 @@ grotto-serve = { path = "../grotto-serve" }
 clap = { version = "4", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
+chrono = "0.4"
+
+[dev-dependencies]
+tempfile = "3"
