--- a/crates/grotto-serve/Cargo.toml
+++ b/crates/grotto-serve/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
+rust-embed = "8"
 
 [dev-dependencies]
 tempfile = "3"
